# nanoxml

./: Cargo.toml  LICENSE  README.md
derive/: Cargo.toml
derive/src/: lib.rs
src/: de.rs  derive.rs  lib.rs  ser.rs
src/derive/: de.rs  mod.rs  ser.rs
tests/: de.rs  derive.rs  ser.rs
