[package]
name = "nanoxml"
version = "0.1.0"
edition = "2024"

[features]
default = ["alloc", "de", "derive", "ser"]
alloc = []
de = ["nanoxml-derive?/de"]
derive = ["dep:nanoxml-derive"]
ser = ["nanoxml-derive?/ser"]
heapless = ["dep:heapless"]

[dependencies]
heapless = { version = "0.8.0", optional = true }
nanoxml-derive = { path = "./derive", optional = true }

[workspace]
resolver = "2"
members = ["derive"]
