[package]
name = "nanoxml"
version = "0.3.2"
edition = "2024"
description = "A truly minimal XML (de)serializer"
license = "MIT"
documentation = "https://git.tjdev.de/thetek/nanoxml"
homepage = "https://git.tjdev.de/thetek/nanoxml"
repository = "https://git.tjdev.de/thetek/nanoxml"
readme = "README.md"
keywords = ["xml", "serialization", "deserialization", "serde"]

[features]
default = ["alloc", "de", "derive", "ser"]
alloc = []
de = ["nanoxml-derive?/de"]
derive = ["dep:nanoxml-derive"]
ser = ["nanoxml-derive?/ser"]
heapless = ["dep:heapless"]
defmt = ["dep:defmt"]

[dependencies]
defmt = { version = "1.0.1", optional = true }
heapless = { version = "0.8.0", optional = true }
nanoxml-derive = { path = "./derive", version = "0.3.2", optional = true }

[workspace]
resolver = "2"
members = ["derive"]
