[package]
name = "nanoxml-derive"
version = "0.3.2"
edition = "2024"
description = "Derive macros for nanoxml"
license = "MIT"
documentation = "https://git.tjdev.de/thetek/nanoxml"
homepage = "https://git.tjdev.de/thetek/nanoxml"
repository = "https://git.tjdev.de/thetek/nanoxml"
keywords = ["xml", "serialization", "deserialization", "serde"]

[lib]
proc-macro = true

[features]
default = []
de = []
ser = []

[dependencies]
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = "2.0.100"
